fix: images not showing on github live preview

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a {
   margin: 100px auto 0;
 }
 .hero__img {
-  background-image: url("../images/illustration-1.svg");
+  background-image: url("./images/illustration-1.svg");
   width: 95%;
   height: 225px;
   max-height: 100%;
@@ -350,7 +350,7 @@ form {
 justify-content: space-around;
   }
   .hero__img {
-    background-image: url("../images/illustration-1.svg");
+    background-image: url("./images/illustration-1.svg");
     width: 50%;
     height: 474px;
     max-height: 100%;
